add swagger annotations, unit and feature tests for updateProjectStatus route
