# storage/api-docs/api-docs.json
@@ -214,6 +214,46 @@
                     "401": {
                         "description": "Unauthorized"
                     },
+                    "404": {
+                        "description": "Resource not found."
+                    },
+                    "422": {
+                        "description": "Unprocessable Content."
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/projects/{project}/{action}": {
+            "patch": {
+                "tags": [
+                    "Projects"
+                ],
+                "summary": "Update existing project status.",
+                "description": "Endpoint which updates already existing project status.",
+                "operationId": "updateProjectStatus",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/project"
+                    },
+                    {
+                        "$ref": "#/components/parameters/action"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Resource not found."
+                    },
                     "422": {
                         "description": "Unprocessable Content."
                     }
@@ -241,9 +281,6 @@
                 "type": "object"
             },
             "UpdateProjectRequest": {
-                "required": [
-                    "project"
-                ],
                 "properties": {
                     "title": {
                         "type": "string",
@@ -372,6 +409,19 @@
                     "enum": [
                         0,
                         1
+                    ]
+                }
+            },
+            "action": {
+                "name": "action",
+                "in": "path",
+                "description": "Project status update action",
+                "required": true,
+                "schema": {
+                    "type": "string",
+                    "enum": [
+                        "open",
+                        "close"
                     ]
                 }
             }
